--- a/src/pickleball/MatchCardV2/MatchCardV2.module.css
+++ b/src/pickleball/MatchCardV2/MatchCardV2.module.css
@@ -178,8 +178,12 @@
   @apply text-gray-400 bg-white;
 }
 
+.scores-previous-game-winner {
+  @apply border-white;
+}
+
 .scores-winner-inner {
-  @apply border-x flex items-center justify-center border-white absolute inset-y-0 left-[-1px] right-[-1px];
+  @apply flex items-center justify-center;
 }
 
 .card--footer {
